                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_dav: When a PROPPATCH attempts to remove a non-existent dead
     property on a resource for which there is no dead property in the same
     namespace httpd segfaults. PR 52559 [Diego Santa Cruz
     <diego.santaCruz spinetix.com>]

  *) mod_dav: PROPPATCH delete (svn propdel) silently discards errors.
     PR 53525 [Arwin Arni <arwin collab.net>]

  *) mod_dav: Ensure URI is correctly uriencoded on return. PR 54611
     [Timothy Wood <tjw omnigroup.com>]

  *) mod_dav: Sending a If or If-Match header with an invalid ETag doesn't
     result in a 412 Precondition Failed. PR 54610 [Timothy Wood
     <tjw omnigroup.com>]

  *) mod_dav: Make sure that when we prepare an If URL for Etag comparison,
     we compare unencoded paths. PR 53910 [Timothy Wood <tjw omnigroup.com>]

  *) core, mod_ssl: Lift the restriction that prevents mod_ssl taking
     full advantage of the event MPM. Enable the ability for a module
     to reverse the sense of a poll event from a read to a write or vice
     versa. [Graham Leggett]

  *) htpasswd: Add -v option to verify a password. [Stefan Fritsch]

  *) htpasswd, htdbm: Fix password generation. PR 54735. [Stefan Fritsch]

  *) mod_dav: Improve error handling in dav_method_put(), add new
     dav_join_error() function.  PR 54145.  [Ben Reser <ben reser.org>]

  *) mod_auth_digest: Fix crashes if shm initialization failed. [Stefan
     Fritsch]
 
  *) mod_ldap: LDAP connections used for authentication were not respecting
     LDAPConnectionPoolTimeout.  PR 54587

  *) core: ap_rgetline_core now pulls from r->proto_input_filters.

  *) mod_proxy_html: process parsed comments immediately. 
     Fixes bug where parsed comments may be lost. [Nick Kew]

  *) mod_proxy_html: introduce doctype for HTML 5 [Nick Kew]

  *) mod_proxy_html: fix typo-bug processing "strict" vs "transitional"
     HTML/XHTML [Nick Kew]
